# tinygeo

./: .gitmodules  CMakeLists.txt  setup.py  test.py
include/tinygeo/: box.h  buffer.h  capnp.h  concepts.h  pack.h  point.h  raytrace.h  triangle.h
include/tinyrgeo/: box.h  box_lib.h  buffer.h  concepts.h  iterator.h  pack.h  point.h  point_lib.h  raytrace.h  triangle.h  types.h
src/: CMakeLists.txt  python.cpp  rtree_geo.capnp  tinygeo.capnp
